[package]
name = "qhantoom-dev"
version = "0.1.0"
authors = ["monsieurbadia <iam@monsieurbadia.com>"]
edition = "2018"

[lib]
name = "qhantoom_dev"
crate-type = ["cdylib"]
path = "src/system/lib.rs"

[dependencies]
qhantoom = {git = "https://github.com/qhantoom/qhantoom.git"}
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  # 'Document',
  # 'HtmlElement',
  # 'HtmlInputElement',
  # 'MessageEvent',
  # 'Window',
  # 'Worker',
]